--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@use-gesture/react": "^10.3.0",
     "audiokeys": "^0.1.1",
     "next": "^14.1.0",
     "react": "^18",
