--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "tone": "^14.8.49"
+    "tone": "^14.8.49",
+    "webmidi": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "^20",
