--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@use-gesture/react": "^10.3.0",
     "audiokeys": "^0.1.1",
+    "framer-motion": "^11.0.5",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
