--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.99.4",
+    "@react-three/fiber": "^8.15.16",
+    "@types/three": "^0.161.2",
     "@use-gesture/react": "^10.3.0",
     "audiokeys": "^0.1.1",
     "framer-motion": "^11.0.5",
     "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "three": "^0.161.0",
     "tone": "^14.8.49",
-    "webmidi": "^3.1.8"
+    "webmidi": "^3.1.8",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
