--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.99.4",
     "@react-three/fiber": "^8.15.16",
+    "@react-three/postprocessing": "^2.16.0",
     "@types/three": "^0.161.2",
     "@use-gesture/react": "^10.3.0",
     "audiokeys": "^0.1.1",
