--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/postprocessing": "^2.16.0",
     "@tabler/icons-react": "^3.0.1",
     "@types/three": "^0.161.2",
+    "@uiw/react-color-wheel": "^2.1.1",
     "@use-gesture/react": "^10.3.0",
     "audiokeys": "^0.1.1",
     "framer-motion": "^11.0.5",
