--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "synthesizer",
   "version": "0.1.0",
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "private": true,
   "scripts": {
@@ -41,6 +41,7 @@
     "prisma": "^5.10.2",
     "tailwindcss": "^3.3.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.7.2",
     "typescript": "^5.4.3"
   }
 }
