--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
-    "@react-three/drei": "^9.99.4",
-    "@react-three/fiber": "^8.15.16",
-    "@react-three/postprocessing": "^2.16.0",
+    "@react-three/drei": "^9.107.0",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
     "@tabler/icons-react": "^3.0.1",
     "@types/three": "^0.161.2",
     "@uiw/react-color-wheel": "^2.1.1",
     "@use-gesture/react": "^10.3.0",
     "audiokeys": "^0.1.1",
     "framer-motion": "^11.0.5",
-    "next": "^14.2.3",
+    "glsl-noise": "^0.0.0",
+    "leva": "^0.9.35",
+    "next": "^14.2.4",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.161.0",
-    "tone": "^14.9.9",
+    "three-custom-shader-material": "^5.4.0",
+    "tone": "^15.0.4",
     "webmidi": "^3.1.9",
     "zustand": "^4.5.2"
   },
@@ -39,6 +43,8 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
+    "glslify": "^7.1.1",
+    "glslify-loader": "^2.0.0",
     "postcss": "^8",
     "prisma": "^5.13.0",
     "tailwindcss": "^3.3.0",
